Fixed articles issue on mobile

--- a/docs/_block.sass
+++ b/docs/_block.sass
@@ -62,9 +62,26 @@
   .footerLight
     background-color: white
   .footerLight, .footerDark
-    padding: 6px 6px 50px 6px
+    padding: 6px 6px 6px 6px
+    min-height: 56px
+    position: relative
+    .footerComment
+      font-size: 18
+      margin: 0
+      position: relative
+      width: 480px
     .buttonFlat, .buttonRaised
-      float: right
+      position: absolute
+      right: 0
+      bottom: 0
+      height: 44px
+      margin: 6px 6px
+
+@media only screen and (max-width: 768px)
+  .articleCardDark, .articleCardLight
+    .footerDark, .footerLight
+      .footerComment
+        width: 320px
 
 /*FOOTER
 
